--- a/Final_project/app/src/main/res/layout/activity_single_inspection.xml
+++ b/Final_project/app/src/main/res/layout/activity_single_inspection.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".SingleInspection">
+    tools:context=".SingleInspection"
+    android:background="@drawable/background_color">
 
     <TextView
         android:id="@+id/textViewDateN"
@@ -14,6 +15,7 @@
         android:layout_marginTop="16dp"
         android:text="@string/NameDateOfInspection"
         android:textSize="18sp"
+        android:textColor="#fff"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -25,6 +27,7 @@
         android:layout_marginTop="8dp"
         android:text="@string/NameInspType"
         android:textSize="18sp"
+        android:textColor="#fff"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textViewDateN" />
 
@@ -36,6 +39,7 @@
         android:layout_marginTop="8dp"
         android:text="@string/NameNumCritical"
         android:textSize="18sp"
+        android:textColor="#fff"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textViewtypeN" />
 
@@ -47,6 +51,7 @@
         android:layout_marginTop="8dp"
         android:text="@string/NameNumNonCritical"
         android:textSize="18sp"
+        android:textColor="#fff"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textViewNumCriticalN" />
 
@@ -58,18 +63,20 @@
         android:layout_marginTop="8dp"
         android:text="@string/NameHazard"
         android:textSize="18sp"
+        android:textColor="#fff"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textViewNumNonCriN" />
 
     <ListView
         android:id="@+id/ListView"
-        android:layout_width="400dp"
-        android:layout_height="357dp"
-        android:layout_marginStart="5dp"
+        android:layout_width="383dp"
+        android:layout_height="359dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"
         android:layout_marginBottom="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent" >
-    </ListView>
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"></ListView>
 
     <TextView
         android:id="@+id/textViewDate"
@@ -79,6 +86,7 @@
         android:layout_marginTop="16dp"
         android:text="@string/DateOfInspection"
         android:textSize="18sp"
+        android:textColor="#fff"
         app:layout_constraintStart_toEndOf="@+id/textViewDateN"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -90,6 +98,7 @@
         android:layout_marginTop="8dp"
         android:text="@string/InspType"
         android:textSize="18sp"
+        android:textColor="#fff"
         app:layout_constraintStart_toEndOf="@+id/textViewtypeN"
         app:layout_constraintTop_toBottomOf="@+id/textViewDate" />
 
@@ -101,6 +110,7 @@
         android:layout_marginTop="8dp"
         android:text="@string/NumCritical"
         android:textSize="18sp"
+        android:textColor="#fff"
         app:layout_constraintStart_toEndOf="@+id/textViewNumCriticalN"
         app:layout_constraintTop_toBottomOf="@+id/textViewType" />
 
@@ -112,6 +122,7 @@
         android:layout_marginTop="8dp"
         android:text="@string/NumNonCritical"
         android:textSize="18sp"
+        android:textColor="#fff"
         app:layout_constraintStart_toEndOf="@+id/textViewNumNonCriN"
         app:layout_constraintTop_toBottomOf="@+id/textViewNumCritical" />
 
@@ -133,10 +144,10 @@
         android:id="@+id/textViewViolationName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="4dp"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="24dp"
         android:text="@string/ViolationName"
-        android:textColor="#000000"
+        android:textColor="#fff"
         android:textSize="24sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textViewHazardLevelN" />
@@ -158,6 +169,7 @@
         android:layout_marginBottom="200dp"
         android:text="@string/emptyStatus"
         android:textSize="30sp"
+        android:textColor="#fff"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
