--- a/Final_project/app/src/main/res/layout/activity_pop_up_dowload.xml
+++ b/Final_project/app/src/main/res/layout/activity_pop_up_dowload.xml
@@ -12,11 +12,13 @@
         android:id="@+id/imageView2"
         android:layout_width="117dp"
         android:layout_height="106dp"
+        android:layout_marginTop="72dp"
         android:tint="#fff"
+        android:contentDescription="@string/image_download"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:srcCompat="@android:drawable/stat_sys_download"
-        tools:layout_editor_absoluteY="183dp" />
+        app:layout_constraintTop_toBottomOf="@+id/textView"
+        app:srcCompat="@android:drawable/stat_sys_download" />
 
     <Button
         android:id="@+id/button_update_popup"
@@ -52,7 +54,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/update_available"
-        android:textSize="25dp"
+        android:textSize="25sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
