--- a/Final_project/app/src/main/res/drawable/background_button_cancel.xml
+++ b/Final_project/app/src/main/res/drawable/background_button_cancel.xml
@@ -4,7 +4,7 @@
         <shape android:shape="rectangle"  >
             <corners android:radius="15dp" />
             <stroke android:width="1dip" android:color="#5e7974" />
-            <gradient android:angle="-90" android:startColor="#fe8a71" android:endColor="#fe8a712"  />
+            <gradient android:angle="-90" android:startColor="#fe8a71" android:endColor="#fe8a71"  />
         </shape>
     </item>
     <item android:state_focused="true">
