--- a/Final_project/app/src/main/res/layout/activity_downloading_data.xml
+++ b/Final_project/app/src/main/res/layout/activity_downloading_data.xml
@@ -4,6 +4,34 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".UI.DownloadingDataActivity">
+    tools:context=".UI.DownloadingDataActivity"
+    android:background="@drawable/background_popup"
+    >
 
+    <ImageView
+        android:id="@+id/imageView3"
+        android:layout_width="243dp"
+        android:layout_height="181dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.338"
+        app:srcCompat="@drawable/loading" />
+
+    <Button
+        android:id="@+id/button_cancel_popup"
+        android:layout_width="152dp"
+        android:layout_height="54dp"
+        android:layout_marginBottom="164dp"
+
+        android:background="@drawable/background_button_cancel"
+        android:text="@string/cancel"
+        android:textColor="#fff"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView3"
+        app:layout_constraintVertical_bias="0.79" />
 </androidx.constraintlayout.widget.ConstraintLayout>
