--- a/Final_project/app/src/main/res/values/styles.xml
+++ b/Final_project/app/src/main/res/values/styles.xml
@@ -19,4 +19,11 @@
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
     </style>
+
+    <style name="AppTheme.PopUpTheme">
+        <item name="windowNoTitle">true</item>
+        <item name="android:windowIsTranslucent">true</item>
+        <item name="android:windowCloseOnTouchOutside">true</item>
+        <item name="android:windowBackground">@android:color/transparent</item>
+    </style>
 </resources>
