--- a/Final_project/app/src/main/res/layout/activity_downloading_data.xml
+++ b/Final_project/app/src/main/res/layout/activity_downloading_data.xml
@@ -12,25 +12,25 @@
         android:id="@+id/button_cancel_download"
         android:layout_width="152dp"
         android:layout_height="54dp"
-        android:layout_marginBottom="164dp"
 
+        android:layout_marginTop="72dp"
         android:background="@drawable/background_button_cancel"
         android:text="@string/cancel"
         android:textColor="#fff"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintHorizontal_bias="0.494"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/progressBar" />
 
     <ProgressBar
         android:id="@+id/progressBar"
         style="?android:attr/progressBarStyle"
         android:layout_width="154dp"
         android:layout_height="146dp"
-        app:layout_constraintBottom_toTopOf="@+id/button_cancel_download"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.501"
+        app:layout_constraintHorizontal_bias="0.49"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.663" />
+        app:layout_constraintVertical_bias="0.181" />
 </androidx.constraintlayout.widget.ConstraintLayout>
