--- a/Final_project/app/src/main/res/layout/activity_pop_up_dowload.xml
+++ b/Final_project/app/src/main/res/layout/activity_pop_up_dowload.xml
@@ -9,56 +9,15 @@
     >
 
 
-    <Button
-        android:id="@+id/button_update_popup"
-        android:layout_width="152dp"
-        android:layout_height="54dp"
-        android:layout_marginBottom="10dp"
-        android:background="@drawable/background_button_dowload"
-        android:text="@string/update_popup"
-        android:textColor="#fff"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.742" />
 
-    <ImageView
-        android:id="@+id/imageView2"
-        android:layout_width="117dp"
-        android:layout_height="106dp"
-        android:layout_marginBottom="15dp"
-        android:contentDescription="@string/image_download"
-        android:tint="#fff"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.215"
-        app:srcCompat="@android:drawable/stat_sys_download" />
-
-    <Button
-        android:id="@+id/button_cancel_popup"
-        android:layout_width="152dp"
-        android:layout_height="54dp"
-
-        android:background="@drawable/background_button_cancel"
-        android:text="@string/ignore_popup"
-        android:textColor="#fff"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.881" />
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/update_available"
-        android:textSize="25sp"
+        android:textColor="#fff"
+        android:textSize="30sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -66,4 +25,46 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.059" />
+
+
+    <Button
+        android:id="@+id/button_update_popup"
+        android:layout_width="152dp"
+        android:layout_height="54dp"
+        android:layout_marginTop="24dp"
+        android:background="@drawable/background_button_dowload"
+        android:text="@string/update_popup"
+        android:textColor="#fff"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView2" />
+
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="117dp"
+        android:layout_height="106dp"
+        android:layout_marginTop="20dp"
+        android:contentDescription="@string/image_download"
+        android:tint="#fff"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView"
+        app:srcCompat="@android:drawable/stat_sys_download" />
+
+    <Button
+        android:id="@+id/button_cancel_popup"
+        android:layout_width="152dp"
+        android:layout_height="54dp"
+
+        android:layout_marginTop="20dp"
+        android:background="@drawable/background_button_cancel"
+        android:text="@string/ignore_popup"
+        android:textColor="#fff"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/button_update_popup" />
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
