--- a/Final_project/app/src/main/res/layout/activity_single_restaurant.xml
+++ b/Final_project/app/src/main/res/layout/activity_single_restaurant.xml
@@ -97,5 +97,16 @@
         app:layout_constraintVertical_bias="1.0"
         />
 
+    <Button
+        android:id="@+id/button2"
+        android:layout_width="51dp"
+        android:layout_height="42dp"
+        android:layout_marginTop="4dp"
+        android:background="@drawable/star_off"
+        android:backgroundTint="#F3F1F1"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView_Single_Restaurant_longitude" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
