--- a/Final_project/app/src/main/res/layout/item_view.xml
+++ b/Final_project/app/src/main/res/layout/item_view.xml
@@ -23,13 +23,13 @@
         <TextView
             android:id="@+id/restaurantName"
             android:layout_width="213dp"
-            android:textStyle="bold"
             android:layout_height="wrap_content"
             android:layout_marginStart="11dp"
             android:layout_marginTop="5dp"
             android:layout_toEndOf="@+id/item_image"
             android:text="@string/restaurantName"
-            android:textSize="24sp" />
+            android:textSize="24sp"
+            android:textStyle="bold" />
 
         <TextView
             android:id="@+id/restaurantAddress"
@@ -55,9 +55,10 @@
             android:id="@+id/hazardLevelIcon"
             android:layout_width="50dp"
             android:layout_height="50dp"
+            android:layout_alignParentTop="true"
             android:layout_alignParentEnd="true"
-            android:layout_marginTop="10dp"
-            android:layout_marginEnd="10dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginEnd="11dp"
             app:srcCompat="?android:attr/alertDialogIcon" />
 
         <TextView
@@ -81,6 +82,16 @@
             android:layout_marginEnd="17dp"
             android:layout_marginBottom="5dp"
             android:text="@string/lastDateInspection" />
+
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="50dp"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/hazardLevelTextView"
+            android:layout_alignParentEnd="true"
+            android:layout_marginTop="5dp"
+            android:layout_marginEnd="10dp"
+            app:srcCompat="@android:drawable/btn_star_big_on" />
 
     </RelativeLayout>
 
