--- a/Final_project/app/src/main/res/layout/activity_single_restaurant.xml
+++ b/Final_project/app/src/main/res/layout/activity_single_restaurant.xml
@@ -98,7 +98,7 @@
         />
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/btn_favorite"
         android:layout_width="51dp"
         android:layout_height="42dp"
         android:layout_marginTop="4dp"
