--- a/Final_project/app/src/main/res/layout/activity_search.xml
+++ b/Final_project/app/src/main/res/layout/activity_search.xml
@@ -19,18 +19,18 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
-        android:layout_marginTop="80dp"
+        android:layout_marginTop="90dp"
         android:layout_marginEnd="20dp"
         android:text="@string/hazard_level"
         android:textSize="18sp" />
 
     <Button
         android:id="@+id/buttonGreen"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="#FFFFFF"
-        android:layout_marginTop="120dp"
-        android:layout_marginStart="20dp"
+        android:layout_width="55dp"
+        android:layout_height="55dp"
+        android:background="@drawable/red_outline_button"
+        android:layout_marginTop="130dp"
+        android:layout_marginStart="30dp"
         android:text="Button" />
 
     <Button
@@ -45,17 +45,42 @@
         android:id="@+id/buttonRed"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="120dp"
+        android:layout_alignBottom="@id/buttonGreen"
         android:layout_alignParentEnd="true"
         android:layout_marginEnd="30dp"
         android:text="Button" />
+
+    <TextView
+        android:id="@+id/textViewLow"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="180dp"
+        android:layout_marginStart="45dp"
+        android:text="@string/low" />
+
+    <TextView
+        android:id="@+id/textViewModerate"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@id/textViewLow"
+        android:layout_centerHorizontal="true"
+        android:text="@string/moderate" />
+
+    <TextView
+        android:id="@+id/textViewHigh"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/buttonGreen"
+        android:layout_alignParentEnd="true"
+        android:layout_marginEnd="45dp"
+        android:text="@string/high" />
 
     <TextView
         android:id="@+id/textViewCriticalText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
-        android:layout_marginTop="190dp"
+        android:layout_marginTop="220dp"
         android:text="@string/critical_violation"
         android:textSize="18sp" />
 
@@ -63,58 +88,77 @@
         android:id="@+id/textViewLager"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="30dp"
-        android:layout_marginTop="220dp"
+        android:layout_marginStart="45dp"
+        android:layout_marginTop="255dp"
         android:text="@string/larger_than"
-        android:textSize="18sp" />
+        android:textSize="20sp" />
 
     <TextView
         android:id="@+id/textViewSmaller"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="30dp"
-        android:layout_marginTop="250dp"
+        android:layout_marginStart="45dp"
+        android:layout_marginTop="290dp"
         android:text="@string/less_than"
-        android:textSize="18sp" />
+        android:textSize="20sp" />
 
     <EditText
         android:id="@+id/editTextTextLager"
         android:layout_width="wrap_content"
-        android:layout_height="20dp"
-        android:ems="10"
-        android:layout_marginTop="210dp"
+        android:layout_height="wrap_content"
         android:layout_alignBottom="@id/textViewLager"
         android:layout_centerHorizontal="true"
-        android:inputType="textPersonName"
-        android:text="Name" />
+        android:ems="12"
+        android:inputType="number"
+        android:hint="@string/input_critical_violation"
+        android:textSize="14sp" />
 
     <EditText
         android:id="@+id/editTextTextLess"
         android:layout_width="wrap_content"
-        android:layout_height="20dp"
-        android:ems="10"
-        android:layout_marginTop="240dp"
+        android:layout_height="wrap_content"
         android:layout_alignBottom="@id/textViewSmaller"
         android:layout_centerHorizontal="true"
-        android:inputType="textPersonName"
-        android:text="Name" />
+        android:ems="12"
+        android:inputType="number"
+        android:hint="@string/input_critical_violation"
+        android:textSize="14sp" />
 
     <Button
-        android:id="@+id/button4"
+        android:id="@+id/buttonReset"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="30dp"
-        android:layout_marginTop="340dp"
-        android:text="Button" />
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="50dp"
+        android:text="@string/reset_button" />
 
     <Button
-        android:id="@+id/button5"
+        android:id="@+id/buttonSearch"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="340dp"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="50dp"
         android:layout_alignParentEnd="true"
         android:layout_marginEnd="30dp"
-        android:text="Button" />
+        android:text="@string/search_button" />
+
+    <TextView
+        android:id="@+id/textViewFavourite"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="330dp"
+        android:text="@string/favourite_text"
+        android:textSize="18sp" />
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="360dp"
+        app:srcCompat="@android:drawable/btn_star_big_on" />
 
 
 </RelativeLayout>
